--- a/project2/index.html
+++ b/project2/index.html
@@ -51,7 +51,7 @@
                
             </div>
             <div>
-                <img src="https://camo.githubusercontent.com/52d845f4e48573d070b17e863b7d26a412176b1948a34e0f167ef2a1c7a74e7d/68747470733a2f2f692e70696e696d672e636f6d2f6f726967696e616c732f64382f38312f61312f64383831613131616635636330616330343466633930383331366261343030622e6a7067">
+                <img src="https://i.pinimg.com/736x/60/8d/7f/608d7f1d8d70802b2a66ff201f22199c.jpg">
             </div>
        </div>
             
